--- a/sorteador.html
+++ b/sorteador.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <audio autoplay loop>
+  <source src="your-audio-file.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
     <button onclick="teste()">ok</button>
 </body>
 <script src="./sorteador.js"></script>
