--- a/sorteador.html
+++ b/sorteador.html
@@ -10,7 +10,9 @@
   <source src="your-audio-file.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
-    <button onclick="teste()">ok</button>
+    <button onclick="organizar()">Organizar Potes</button>
+
+  <script src="./main.ts"></script>
 </body>
-<script src="./sorteador.js"></script>
+<!-- <script src="./sorteador.ts"></script> -->
 </html>
