--- a/sorteador.html
+++ b/sorteador.html
@@ -10,7 +10,7 @@
   <source src="your-audio-file.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
-    <button onclick="organizar()">Organizar Potes</button>
+    <button onclick="organizar()">Reoganizar Potes</button>
 
   <script src="./main.ts"></script>
 </body>
