--- a/sorteador_da_champions/index.html
+++ b/sorteador_da_champions/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon"  href="https://th.bing.com/th?q=Fonte+De+Letras+Champions+League&w=120&h=120&c=1&rs=1&qlt=70&o=7&cb=1&pid=InlineBlock&rm=3&mkt=pt-PT&cc=PT&setlang=pt-br&adlt=moderate&t=1&mw=247" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sorteio da Champions</title>
   </head>
